# KRYPTO_BOT

./: .env.example  .gitignore  AGENTS.md  CODEX_MASTER_PLAN.md  LOG.md  Makefile  PROJECT_STATE.md  README.md  constraints.txt  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  CODEX_USAGE_POLICY.md  CODING_STANDARDS.md  DATA_SOURCE_POLICY.md  DB_SCHEMA_POLICY.md  EXECUTION_CONTEXT.md  KILL_SWITCH.md  LIVE_TRADING_CHECKLIST.md  NETWORK_RESILIENCE.md  PACKAGING.md  PHASE_GATE.md  RISK_POLICY.md  RUNBOOK.md  TEST_QUALITY_GATES.md
docs/adr/: ADR-002-data-source-policy.md  ADR-005-no-docker-local-development-mode.md
docs/skills/: algorithm_review.md  backtest_validation.md  codex_usage_budget.md  coding_standards.md  coinbase_auth.md  crypto_trader_knowledge.md  cz_tax_rules.md  db_schema_migrations.md  dependency_review.md  execution_context.md  freqai_practices.md  freqtrade_coinbase_ccxt.md  network_resilience.md  packaging_app_architecture.md  reconciliation.md  risk_engine.md  test_quality_gates.md  ui_patterns.md
reports/backtests/: 2026-06-21_drawdown.csv  2026-06-21_metrics.json  2026-06-21_mock_backtest_report.json  2026-06-21_mock_backtest_report.md  2026-06-21_montecarlo.json  2026-06-21_strategy_summary.md  2026-06-21_trades.csv  2026-06-21_walkforward.json
reports/data_parity/: 2026-06-21_mock_parity_report.md
reports/research/: 2026-06-21_coinbase_freqtrade_capability.md
scripts/: compare_coinbase_data_sources.py  dev.ps1  run_backtest_report.py
src/coinbase_freqtrade_guarded_bot/: __init__.py  __main__.py  cli.py
src/coinbase_freqtrade_guarded_bot/config/: __init__.py
src/coinbase_freqtrade_guarded_bot/data_layer/: __init__.py
src/coinbase_freqtrade_guarded_bot/guard_layer/: __init__.py  audit_writer.py  data_parity.py  kill_switch.py  order_intent.py  risk_limits.py
src/coinbase_freqtrade_guarded_bot/network/: __init__.py  http_client.py
src/coinbase_freqtrade_guarded_bot/reporting/: __init__.py
src/coinbase_freqtrade_guarded_bot/research/: __init__.py  backtest_validation.py
tests/: test_audit_writer.py  test_backtest_validation.py  test_cli.py  test_data_parity.py  test_imports.py  test_kill_switch.py  test_no_live_execution.py  test_order_intent.py  test_risk_limits.py  test_strategy_sanity.py
user_data/config/: config.backtest.json  config.dryrun.json  pairlist.json
user_data/strategies/: CoinbaseTrendGuardV1.py
(+5 files in other folders)
